--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "emoji-identifier",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Generate fabulous ids",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -24,6 +24,9 @@
   ],
   "author": "Vilhelm Melkstam <vilhelm.melkstam@gmail.com>",
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "bugs": {
     "url": "https://github.com/vilhelmmelkstam/emojiid/issues"
   },
