--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,10 @@
 {
-    "compilerOptions": {
-        "target": "ES3",
-        "declaration": true,
-        "strict": true,
-        "skipLibCheck": true,
-        "lib": [
-            "es2015",
-            "es2016",
-            "es2017",
-            "dom"
-        ],
-    },
-    "include": [
-        "src"
-    ],
+	"compilerOptions": {
+		"target": "ES3",
+		"declaration": true,
+		"strict": true,
+		"skipLibCheck": true,
+		"lib": ["es2015", "es2016", "es2017", "dom"]
+	},
+	"include": ["src"]
 }
